[package]
name = "moby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
colorous = "1.0.12"
cpal = "0.15.2"
derive_more = "0.99.17"
image = "0.24.7"
imageproc = "0.23.0"
libm = "0.2"
median = "0.3.2"
num = "0.4.1"
pixels = "0.13"
rodio = "0.17.1"
rustc_tools_util = "0.3.0"
winit = "0.28"

[dependencies.microfft]
version = "0.5"
features = ["std"]

[dependencies.plotters]
version = "0.3"
path = "//Users/steveweeks/dev/Rust/plotters/plotters"
